@@ -1,3 +1,8 @@
+2004-02-12  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b34
+
+	* Simplified and strengthened the hack checks in slideshow.php, on
+	  Bharat's advice.
+
 2004-02-11  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b33
 
 	* Reverted Christian "fix" to remove a cmd.exe invocation: it failed
